--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,7 @@
 <% content_for :page_title, @context.name %>
 <% @active_tab ||= "home" %>
-<h1 class='screenreader-only'><%= @context.name %></h1>
+<h1 class='screenreader-only'>
+  <%= @context.name %></h1>
 <% content_for :auto_discovery do %>
   <% if @context_enrollment %>
     <%= auto_discovery_link_tag(:atom, feeds_course_format_path(@context_enrollment.feed_code, :atom), {:title => "Course Atom Feed"}) %>
@@ -8,10 +9,9 @@
     <%= auto_discovery_link_tag(:atom, feeds_course_format_path(@context.feed_code, :atom), {:title => "Course Atom Feed"}) %>
   <% end %>
 <% end %>
-
 <% content_for :right_side do %>
   <div id="course_show_secondary">
-    <% if can_do(@context, @current_user, :manage_content) %>
+   <% if can_do(@context, @current_user, :manage_content) %>
       <div class="rs-margin-lr rs-margin-top rs-margin-bottom">
         <a href="#" class="btn button-sidebar-wide wizard_popup_link  <%= 'auto_open' if @context.created? || @context.claimed? %>"><i class="icon-question"></i> <%= t('links.course_setup', %{Course Setup Checklist}) %></a>
         <a class="btn button-sidebar-wide" href="<%= context_url(@context, :new_context_discussion_topic_url, :is_announcement => true) %>"><i class="icon-announcement"></i> <%= t('links.new_announcement', %{New Announcement}) %></a>
@@ -64,7 +64,6 @@
     <%= render :partial => "shared/event_list", :object => @recent_feedback, :locals => {:title => t('titles.recent_feedback', "Recent Feedback"), :display_count => 3, :period => t('period_name', "the last 2 weeks"), :contexts_to_link_to => @context, :is_recent_feedback => true} %>
   <% end %>
 <% end %>
-
 <%
   jammit_css :dashboard
   case @course_home_view
@@ -81,7 +80,6 @@
     js_bundle :dashboard
   end
 %>
-
 <% js_block do %>
 <script>
 
@@ -174,6 +172,7 @@ $(document).ready(function() {
 });
 </script>
 <% end %>
+
 <% if @context.created? || @context.claimed? %>
   <div class="reminder" style='text-align:center;'>
   <h2><%= t('headings.unpublished', %{This Course is Unpublished}) %></h2>
@@ -250,6 +249,7 @@ This layout is probably best for courses that aren't based on a specific schedul
     <% end %>
   </div>
   <% if @course_home_view == 'wiki' %>
+
     <%= render :partial => "wiki_pages/content", :locals => {:course_home => true } %>
   <% elsif @course_home_view == 'modules' %>
     <%= render :partial => 'context_modules/content', :locals => {:course_home => true} %>
