--- a/app/views/accounts/_courses_right_side.html.erb
+++ b/app/views/accounts/_courses_right_side.html.erb
@@ -44,6 +44,5 @@
   <% end %>
 <% end %>
 <% js_bundle :account_show %>
-
 <%= render :partial => 'shared/accounts_right_side_shared' %>
-<%= render :partial => 'add_course_or_user' %>
+<%= render :partial => 'accounts/add_course_or_user' %>
