--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -92,7 +92,7 @@ $(document).ready(function() {
            login_message = t('default_login_message', "Log in at your institution")
            if @domain_root_account && @domain_root_account.display_name
              login_message = t('login_at_account', "Log in at %{school_name}", :school_name => @domain_root_account.display_name)
-           end
+           endk..
         %>
         <a href="<%= login_path %>" style="font-size: 1.3em;" class="btn"><%= login_message %></a>
       </div>
