--- a/app/views/shared/terms_required.html.erb
+++ b/app/views/shared/terms_required.html.erb
@@ -1,39 +1,65 @@
 <%
   content_for :page_title, t('updated_terms_of_use', 'Updated Terms of Use')
-  jammit_css :terms_and_condition
+  jammit_css :login_box
+
   @headers = false
+  @body_classes << "modal" if @body_classes
+
 %>
 
 <% @terms = @domain_root_account.terms_and_condition %>
-<div id="modal-box" class="login-box">
-    <div id="modal-box-inner">
-      <h2 style="width: 50%;"><%= t 'updated_terms_of_use', ' Terms and Conditions  ' %></h2>
-      <div>
-        <h3>
-          <%= "In order to finish signing you up for the Jigsaw, You have to accept the Terms and Conditions" %>
-        </h3>
+<form id="login_box" style="width:40%" class="reaccept_terms clearfix">
+  <% form_for :terms_and_condition,:url=> account_terms_and_condition_url(@domain_root_account,@terms),:html=> {:method => :put} do |f|%>
+   <h2 style="width: 50%;"><%= t 'updated_terms_of_use', ' Terms and Conditions  ' %></h2>
+    <div id="login_form">
+      <div class="error_box errorBox" style="display: block; position:relative; top: auto; left: auto; max-width: 400px">
+        <div class="error_text" style="text-align: center">
+          <h4><%="Accept the terms and conditions" %></h4>
+        </div>
       </div>
-      <% form_for :terms_and_condition,:url=> account_terms_and_condition_url(@domain_root_account,@terms),:html=>{:method => :put,:id => "modal-box-inner"} do |f|%>
-
-    <div style="margin-top: 35px">
-        <%= @terms.terms_and_conditions.html_safe %>
-      </div>
-      <div align="right">
-        <input type="checkbox"  id="receive_informations" value="1"    />
-        <%= f.label :information, :en => "I want to receive information, news and tips from Jigsaw Academy"%>
-      </div>
-      <div id="check_box" style="text-align: center" class="<%= root_url %>">
-        <input type="checkbox"  id="enable_terms_and_conditions" value="1" class="<%= account_terms_and_condition_url(@domain_root_account,@terms) %>"   />
-        <%= f.label :enable_terms_and_conditions, :en => " I Agree to the Terms of Jigsaw Academy" %>
-      </div>
-      <div>
-        <button id="terms_accept_submit" type="submit" class="btn btn-primary submit_button" onclick="validateCheckbox(event)"><%= t(:accept_terms_and_conditions, "Accept") %></button>
-      </div>
-      <%end %>
+    <div>
+      <h3>
+       <%= "In order to finish signing you up for the Jigsaw, You have to accept the Terms and Conditions" %>
+      </h3>
     </div>
+      <hr>
 
-</div>
+   <div style="margin-top: 35px">
+        <%= @terms.terms_and_conditions.html_safe %>
+    </div>
+    <div align="right">
+      <input type="checkbox"  id="enable_terms_and_conditions" value="1"    />
+     <%= f.label :information, :en => "I want to receive information, news and tips from Jigsaw Academy"%>
+    </div>
+   <div id="check_box" style="text-align: center" class="<%= root_url %>">
+     <input type="checkbox"  id="enable_terms_and_conditions" value="1" class="<%= account_terms_and_condition_url(@domain_root_account,@terms) %>"   />
+       <%= f.label :enable_terms_and_conditions, :en => " I Agree to the Terms of Jigsaw Academy" %>
+   </div>
+   <div>
+     <button id="terms_accept_submit" type="submit" class="btn btn-primary submit_button"><%= t(:accept_terms_and_conditions, "Accept") %></button>
+   </div>
 
+    </div>
+<% end %>
+</form>
 
+<% js_block do %>
+    <script type="text/javascript">
+        require([
+            'jquery' /* $ */,
+            'jquery.disableWhileLoading'
+        ], function($) {
+            $(".error_text").hide();
+            $("#login_box").click(function() {
+                if(!$('input[type=checkbox]:checked').length) {
+                    $(".error_text").show();
+                    return false;
+                }
+               return true;
+            });
+        });
+    </script>
+  <%end %>
+</form>
 
 
