--- a/app/views/wiki_pages/_wiki_right_side.html.erb
+++ b/app/views/wiki_pages/_wiki_right_side.html.erb
@@ -122,7 +122,7 @@
             <%= link_to ('<i class="icon-edit"></i>').html_safe + " " + 'Edit this' +" #{@wiki_type.singularize}", "#edit", :class => "edit_link btn button-sidebar-wide" %>
     <%end %>
   <% end %>
-  <% if can_do(@page, @current_user, :delete) && !@page.new_record? && !@page.is_front_page? && !@page.deleted? && @page.url != WikiPage::DEFAULT_FAQ_FRONT_PAGE_URL && @page.url != WikiPage::DEFAULT_CAREER_FRONT_PAGE_URL && @page.url != WikiPage::DEFAULT_VIDEO_FRONT_PAGE_URL && @page.url != WikiPage::DEFAULT_OFFER_FRONT_PAGE_URL && @page.url != WikiPage::DEFAULT_BONUS_VIDEO_FRONT_PAGE_URL && @page.url != WikiPage::DEFAULT_LAB_FRONT_PAGE_URL%>
+  <% if can_do(@page, @current_user, :delete) && !@page.new_record? && !@page.is_front_page? && !@page.deleted? && @page.title != WikiPage::DEFAULT_FAQ_FRONT_PAGE_URL && @page.url != WikiPage::DEFAULT_CAREER_FRONT_PAGE_URL && @page.url != WikiPage::DEFAULT_VIDEO_FRONT_PAGE_URL && @page.url != WikiPage::DEFAULT_OFFER_FRONT_PAGE_URL && @page.url != WikiPage::DEFAULT_BONUS_VIDEO_FRONT_PAGE_URL && @page.url != WikiPage::DEFAULT_LAB_FRONT_PAGE_URL%>
      <% if @wiki_type == "bonus_video" %>
         <%= link_to ('<i class="icon-trash"></i>').html_safe + " " + 'Delete this Bonus Video', context_url(@context, :context_wiki_page_url, @page.wiki_type, @page.url), :method => :delete, :confirm => t('delete_page_confirmation', 'Are you sure you want to delete this page? This cannot be undone!'), :class => "btn button-sidebar-wide" %>
      <%else %>
