--- a/app/views/shared/_context_progression.html.erb
+++ b/app/views/shared/_context_progression.html.erb
@@ -9,7 +9,8 @@
       <div style="width: 66%;float: right;">
       <div id="progressbar" class="ui-progressbar ui-widget ui-widget-content ui-corner-all" role="progressbar"
            aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" style="border-radius: 25px;padding: 5px;
-              height: 20px;margin-right: 10px;margin-top: 8px;background: 100%;background-image: url('../../images/progress_bar_top_grey.png');">
+              height: 20px;margin-right: 10px;margin-top: 8px;background-image: url('../../images/grey-bar.png');
+              background-size: 102% 100%;background-position: -3px;">
         <div class="striped_progressbar" style="width: <%= @current_user_progression %>%;
                 border-radius: 25px;height: 20px;" title="<%= @current_user_progression %>%" data-tooltip></div>
       </div>
