--- a/app/views/shared/_context_progression.html.erb
+++ b/app/views/shared/_context_progression.html.erb
@@ -4,13 +4,11 @@
     end
 %>
 <% if @current_user_progression %>
-    <div style="border: 1px solid #DFDADA;border-radius: 25px;float: left;width: 367px;height: 47px;margin-bottom: 10px;background: #ffffff;">
-    <div style="float: left;margin-top: 3px;padding: 10px 15px;background-image: url('../../images/grey_divider.png');background-repeat: no-repeat;background-position: right;width: 20%"> Progress </div>
+    <div class="progress-capsule" >
+    <div class="progress-divider" > Progress </div>
       <div style="width: 66%;float: right;">
-      <div id="progressbar" class="ui-progressbar ui-widget ui-widget-content ui-corner-all" role="progressbar"
-           aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" style="border-radius: 25px;padding: 5px;
-              height: 20px;margin-right: 10px;margin-top: 8px;background-image: url('../../images/grey-bar.png');
-              background-size: 102% 100%;background-position: -3px;">
+      <div id="progressbar" class="ui-progressbar ui-widget ui-widget-content ui-corner-all grey-count-bar" role="progressbar"
+           aria-valuemin="0" aria-valuemax="100" aria-valuenow="37">
         <div class="striped_progressbar" style="width: <%= @current_user_progression %>%;
                 border-radius: 25px;height: 20px;" title="<%= @current_user_progression %>%" data-tooltip></div>
       </div>
