faq all tinymce ,discussion topic remove group

--- a/app/stylesheets/base/_#header.sass
+++ b/app/stylesheets/base/_#header.sass
@@ -46,8 +46,9 @@
 #header
   position: relative
   z-index: 11 /* IE7 needs this o so the menu-item-drops get stuck above #main */
-  background-color: #F4F4F4
-  border-bottom: 1px solid
+  background-color: white
+  border-bottom: 2px solid
+  border-bottom-color: #f0f0f0
   &.no-user
     background-position: 0 -25px
     min-height: 45px
