--- a/app/stylesheets/base/_layout.sass
+++ b/app/stylesheets/base/_layout.sass
@@ -207,24 +207,26 @@ body
   border-radius: 25px
   padding: 5px
   height: 20px
-  margin-right: 10px
-  margin-top: 8px
+  margin-right: 4px
+  margin-top: 3px
   +bg-image('grey-bar', 'png')
   background-size: 102% 100%
   background-position: -3px
 
 .progress-divider
   float: left
-  margin-top: 3px
-  padding: 10px 15px
+  margin-top: -2px
+  padding: 10px 18px
   +bg-image('grey_divider', 'png')
   background-repeat: no-repeat
   background-position: right
+  background-size: 10px
+  background-position-y: 1px
   width: 20%
 
 .main_navigation_badges
-  height: 47px
-  width: 260px
+  height: 38px
+  width: 263px
   list-style: none
   float: left
   font-size: 12px
@@ -233,12 +235,14 @@ body
   border: 1px solid #DFDADA
   border-radius: 25px
   margin-left: 10px
+  margin-top: -1px
 
 .progress-capsule
   border: 1px solid #DFDADA
   border-radius: 25px
   float: left
-  width: 367px
-  height: 47px
-  margin-bottom: 10px
+  width: 293px
+  height: 38px
+  margin-bottom: 9px
   background: #ffffff
+  margin-top: -2px
