--- a/app/views/jst/DiscussionTopics/IndexView.handlebars
+++ b/app/views/jst/DiscussionTopics/IndexView.handlebars
@@ -97,9 +97,9 @@
 
   <div class="discussion-collections">
     <div class="discussion_tag discussion-list item-group"></div>
-    <div class="pinned discussion-list item-group"></div>
+    <!--<div class="pinned discussion-list item-group"></div>-->
     <div class="open discussion-list item-group"></div>
-    <div class="locked discussion-list item-group"></div>
+    <!--<div class="locked discussion-list item-group"></div>-->
   </div>
 
 {{else}}
