--- a/app/views/jst/DiscussionTopics/discussion.handlebars
+++ b/app/views/jst/DiscussionTopics/discussion.handlebars
@@ -75,17 +75,17 @@
           <li>
             <a href="#" class="icon-trash">{{#t "delete"}}Delete{{/t}}</a>
           </li>
-          {{#if pinnable}}
-            <li>
-              <a href="#" class="icon-pin">
-                {{#if pinned}}
-                  {{#t "unpin"}}Unpin{{/t}}
-                {{else}}
-                  {{#t "pin"}}Pin{{/t}}
-                {{/if}}
-              </a>
-            </li>
-          {{/if}}
+          <!--{{#if pinnable}}-->
+            <!--<li>-->
+              <!--<a href="#" class="icon-pin">-->
+                <!--{{#if pinned}}-->
+                  <!--{{#t "unpin"}}Unpin{{/t}}-->
+                <!--{{else}}-->
+                  <!--{{#t "pin"}}Pin{{/t}}-->
+                <!--{{/if}}-->
+              <!--</a>-->
+            <!--</li>-->
+          <!--{{/if}}-->
         </ul>
       {{/if}}
     </div>
