--- a/app/views/context_modules/_class_recordings.html.erb
+++ b/app/views/context_modules/_class_recordings.html.erb
@@ -9,7 +9,11 @@
               font-weight: bold;
               color: #7f8c8d;
               line-height: 1.3;background-color: #e1f3fd;border-radius:5px;">
-        <div style="width:auto;padding:12px 17px;float:left;"><%= image_tag "class_recordings.png" , :style=> "padding:1px;line-height:20px;height:33px;margin-top:-8px" %> &nbsp;&nbsp;&nbsp;&nbsp;</div>
+        <a  <% if is_managable or @authorized_for_user  %>
+            href="<%= live_class_link.link_url%>"
+            <% end  %>>
+            <div style="width:auto;padding:12px 17px;float:left;"><%= image_tag "class_recordings.png" , :style=> "padding:1px;line-height:20px;height:33px;margin-top:-8px" %> &nbsp;&nbsp;&nbsp;&nbsp;</div>
+        </a>
         <div style="width:85%;padding:5px;">
         <span ><a class="title "
                   <% if is_managable or @authorized_for_user  %>
@@ -27,12 +31,15 @@
               font-weight: bold;
               color: #7f8c8d;
               line-height: 1.1;background-color: #fee8dd;border-radius:5px;">
+        <a   <% if is_managable or @authorized_for_user  %>
+             href="<%= context_url(@context, :context_url) %>/modules/items/<%= tag ? tag.id : "{{ id }}" %>"
+             <% end %>>
         <% if tag.content_type == "ContextExternalTool" %>
             <div style="width:auto;padding:12px 17px;float:left;"><%= image_tag "badges.png" , :style=> "padding:0px;border-radius:35px;margin-top:-8px;width:33px" %> &nbsp;&nbsp;&nbsp;&nbsp;</div>
         <%else %>
           <div style="width:auto;padding:17px;float:left;"><%= image_tag "pdf_icon.png" , :style=> "padding:0px;border-radius:35px;margin-top:-8px;width:33px" %> &nbsp;&nbsp;&nbsp;&nbsp;</div>
         <%end %>
-
+        </a>
         <div style="width:85%;padding:10px;">
           <span ><a class="title"
                     <% if is_managable or @authorized_for_user  %>
