--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -184,7 +184,7 @@ you already use.  Click any of the services in "Other Services" to see what we m
 TEXT
 %></p>
 <p>
-<input type="checkbox" id="show_user_services" <%= 'checked' if @user.show_user_services %>/> <label for="show_user_services"><%= t('labels.show_user_services', "Let fellow course/group members see which services I've linked to my profile") %></label>
+<input type="checkbox" id="show_user_services" <%= 'checked' if @user.show_user_services %>/> <label for="show_user_services"><%= t('labels.show_user_services', "Let fellow course/group members see my details in the LeaderBoard and which services I've linked to my profile") %></label>
 </p>
 <table style="width: 100%;"><tr>
   <td style="vertical-align: top; width: 50%; padding-right: 20px;">
